--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,12 +1,14 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Контакты</title>
+    <title>Курибухай</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
+
 <body>
 
 <header data-bs-theme="dark">
@@ -14,19 +16,18 @@
 </header>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Контакты</h1>
+    <h1 class="display-4">KuriBuhai Online store</h1>
 </div>
 
+<main>
+    {% block content %}
+
+    {% endblock %}
+
+</main>
 <div class="container">
-    <div class="row text-start">
-
-        {% include 'includes/inc_contact.html' %}
-
-        {% include 'includes/inc_email.html' %}
-
-    </div>
-
     {% include 'includes/inc_info.html' %}
+
 </div>
 
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
