--- a/catalog/templates/product_list.html
+++ b/catalog/templates/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'catalog/base.html' %}
+{% extends 'base.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
@@ -7,14 +7,13 @@
             {% for product in products %}
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="{{ product.image }}">
+                    <img src="/media/{{product.preview}}" class="card-img-top" alt={{product.preview}}>
                     <div class="card-body">
                         <p class="card-text">{{ product.name }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
                             </div>
-                            <small class="text-body-secondary">9 mins</small>
                         </div>
                     </div>
                 </div>
