from FBV to CBV

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -176,7 +176,7 @@
 </div>
 
 <header data-bs-theme="dark">
-    {% include 'includes/inc_menu.html' %}
+    {% include 'catalog/includes/inc_menu.html' %}
 </header>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -190,7 +190,7 @@
 
 </main>
 <div class="container">
-    {% include 'includes/inc_info.html' %}
+    {% include 'catalog/includes/inc_info.html' %}
 
 </div>
 
